<resources>
    <string name="app_name">Quiz App</string>

    <string name="question1_title">Question 1</string>
    <string name="question1_text">When did the first episode of the series come out?</string>

    <string name="answer1_variant1">17 Oct 2005</string>
    <string name="answer1_variant2">3 Nov 2007</string>
    <string name="answer1_variant3">24 Sep 2007</string>
    <string name="answer1_variant4">30 Sep 2005</string>

    <string name="question2_title">Question 2</string>
    <string name="question2_text">Who played Sheldon Cooper on the show?</string>

    <string name="question3_title">Question 3</string>
    <string name="question3_text">Who played Rajesh Kutropali in the series?</string>

    <string name="question4_title">Question 4</string>
    <string name="question4_text">Who played Howard Wolowitz on the show?</string>

    <string name="question5_title">Question 5</string>
    <string name="question5_text">Who played Leonard Hofsteder on the show?</string>

    <string name="question6_title">Question 6</string>
    <string name="question6_text">Which of the following actresses played in the series?</string>

    <string name="answer6_variant1">Kaley Christine Cuoco</string>
    <string name="answer6_variant2">Melissa Ivy Rauch</string>
    <string name="answer6_variant3">Sara Gilbert</string>
    <string name="answer6_variant4">Mayim Chaya Bialik</string>
</resources>