<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/question_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_title"
                style="@style/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/answer1_variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_variant1" />

                <RadioButton
                    android:id="@+id/answer1_variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_variant2" />

                <RadioButton
                    android:id="@+id/answer1_variant3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_variant3" />

                <RadioButton
                    android:id="@+id/answer1_variant4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1_variant4" />
            </RadioGroup>

            <EditText
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/answer6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/answer6_variant1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer6_variant1" />

                <CheckBox
                    android:id="@+id/answer6_variant2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer6_variant2" />

                <CheckBox
                    android:id="@+id/answer6_variant3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer6_variant3" />

                <CheckBox
                    android:id="@+id/answer6_variant4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer6_variant4" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:enabled="false"
            android:onClick="setPrevQuestion"
            android:text="@string/prev_question"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setNextQuestion"
            android:text="@string/next_question" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>